--- a/T3kCmd/resources/T3kCmd.rc
+++ b/T3kCmd/resources/T3kCmd.rc
@@ -1,11 +1,11 @@
-IDI_ICON1	ICON	DISCARDABLE	"./Resources/T3kCfg.ico"
+IDI_ICON1	ICON	DISCARDABLE	"./resources/T3kCmd.ico"
 
-#include "../Common/T3k_ver.h"
+#include "../../common/T3k_ver.h"
 #include <windows.h> 
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION T3000_FILEVERSION
- PRODUCTVERSION T3000_FILEVERSION
+FILEVERSION T3000_FILEVERSION
+PRODUCTVERSION T3000_FILEVERSION
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
