--- a/T3kCfg/T3kCfg.rc
+++ b/T3kCfg/T3kCfg.rc
@@ -1,6 +1,6 @@
 IDI_ICON1	ICON	DISCARDABLE	"./Resources/T3kCfg.ico"
 
-#include "../Common/T3k_ver.h"
+#include "../common/T3k_ver.h"
 #include <windows.h> 
 
 VS_VERSION_INFO VERSIONINFO
